--- a/ClientMiniQuest/package.json
+++ b/ClientMiniQuest/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "^4.1.0",
+    "@babylonjs/gui": "^4.1.0",
     "@babylonjs/materials": "^4.1.0",
     "linq": "^3.2.2",
     "webpack-merge": "^4.2.2"
